--- a/style.css
+++ b/style.css
@@ -24,10 +24,12 @@ h1 {
 }
 .info {
   max-width: 1100px;
+  /* min-width: fit-content; */
   margin: 20px auto;
 }
 .main-content {
   max-width: 1100px;
+  /* min-width: 80%; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -77,6 +79,14 @@ span {
 @media (max-width: 700px) {
   * {
     margin: 5%;
+  }
+  .main-content {
+    margin: 5%;
+    width: 90%;
+  }
+  .input-field {
+    width: 95%;
+    border: 1px solid #fff;
   }
   h1 {
     font-size: 35px;
