--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   font-family: "Poppins", sans-serif;
   font-size: 20px;
 }
+/* color of password reveal icon */
+::-ms-reveal {
+  filter: invert(100%);
+}
 body {
   background-color: #f4b310;
 }
@@ -81,7 +85,7 @@ span {
     margin: 5%;
   }
   .main-content {
-    margin: 5%;
+    /* margin: 5%; */
     width: 90%;
   }
   .input-field {
