--- a/style.css
+++ b/style.css
@@ -49,6 +49,23 @@ h3 {
 .item {
   margin: 10px;
 }
+.pass-generate {
+  display: block;
+  background: #121217;
+  width: var(--button-width);
+  padding: 2px 5px 2px 10px;
+  border-radius: 5px;
+  color: #fff;
+  border: 1px solid white;
+  transition: all 0.3s;
+}
+.pass-generate:hover {
+  border: 1px solid rgb(51, 255, 0);
+  background: rgb(51, 255, 0);
+  color: rgb(0, 0, 0);
+  transition: all 0.3s smooth;
+  cursor: pointer;
+}
 .input-field {
   display: block;
   background: #121217;
@@ -81,11 +98,11 @@ span {
 
 /* responsiveness */
 @media (max-width: 700px) {
-  * {
-    /* margin: 5%; */
-  }
   .main-content {
     /* margin: 5%; */
+    width: 99%;
+  }
+  .pass-generate {
     width: 99%;
   }
   .input-field {
